--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: none;
     text-align: center;
 }
