--- a/src/pages/aboutPage/roadmap.css
+++ b/src/pages/aboutPage/roadmap.css
@@ -1,15 +1,48 @@
-.roadmap__wrapper {}
+.roadmap__wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
 
-.roadmap__content {}
+.roadmap__content {
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+}
 
-.content__title__wrapper {}
+.content__title__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+}
 
-.content__title {}
+.content__title {
+    font-size: 2rem;
+}
 
-.content__wrapper {}
+.content__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+}
 
-.text__wrapper {}
+.text__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+}
 
-.heading__text {}
+.heading__text {
+    font-size: 1.2rem;
+    padding: 0;
+    margin: 0;
+}
 
-.body__text {}
+.body__text {
+    font-size: medium;
+    padding: 0;
+    margin: 0;
+}
