--- a/src/pages/aboutPage/summery.css
+++ b/src/pages/aboutPage/summery.css
@@ -1,15 +1,63 @@
-.summery__wrapper {}
+.summery__wrapper {
+    display: flex;
+    flex-direction: column;
+}
 
-.summery__image__wrapper {}
+.summery__image__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 2rem;
+}
 
-.image__selector {}
+.image__selector {
+    display: block;
+    object-fit: cover;
+    width: 150px;
+    height: 150px;
+    border-radius: 10rem;
+    text-align: center;
+}
 
-.summery__content__wrapper {}
+.summery__content__wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+}
 
-.content__text {}
+.content__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+}
 
-.text__selector {}
+.text__selector {
+    font-size: medium;
+    padding: 0;
+    margin: 0;
+}
 
-.cta__wrapper {}
+.cta__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding-top: 1rem;
+}
 
-.cta__button {}
+.cta__button {
+    background-color: #242424;
+    color: #ffffff;
+    border: solid white 2px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 6px;
+    transition: 0.3s ease;
+    font-size: 18px;
+    padding: 0.5rem;
+}
+
+@media (max-width: 800px) {}
