--- a/src/pages/aboutPage/intrests.css
+++ b/src/pages/aboutPage/intrests.css
@@ -1,6 +1,9 @@
 .intrests__wrapper {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    color: black;
+    background-color: white;
 }
 
 .intrests__content {
