--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -9,12 +9,35 @@
 .footer__content {
     display: flex;
     flex-direction: row;
+    gap: 5rem;
 }
 
 .icon__wrapper {
-    padding: 0.5rem;
+    padding: 1rem;
 }
 
 .icon__selector {
-    width: 5rem;
+    width: 10rem;
+    height: 10rem;
+}
+
+@media screen and (max-width: 800px) {
+    .footer__wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+    .footer__content {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+    }
+    .icon__wrapper {
+        padding: 0.5rem;
+    }
+    .icon__selector {
+        width: 5rem;
+    }
 }
