--- a/src/pages/aboutPage/summery.css
+++ b/src/pages/aboutPage/summery.css
@@ -14,23 +14,25 @@
 .image__selector {
     display: block;
     object-fit: cover;
-    width: 150px;
-    height: 150px;
-    border-radius: 10rem;
+    width: 10rem;
+    height: 10rem;
+    border-radius: 1rem;
     text-align: center;
 }
 
 .summery__content__wrapper {
     display: flex;
     flex-direction: column;
-    padding: 0.5rem;
+    padding: 4rem;
 }
 
 .content__text {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
+    gap: 2rem;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
 
 .text__selector {
@@ -45,7 +47,7 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    padding-top: 1rem;
+    padding-top: 4rem;
 }
 
 .cta__button {
@@ -60,4 +62,61 @@
     padding: 0.5rem;
 }
 
-@media (max-width: 800px) {}
+@media (max-width: 800px) {
+    .summery__wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+    .summery__image__wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 2rem;
+    }
+    .image__selector {
+        display: block;
+        object-fit: cover;
+        width: 150px;
+        height: 150px;
+        border-radius: 10rem;
+        text-align: center;
+    }
+    .summery__content__wrapper {
+        display: flex;
+        flex-direction: column;
+        padding: 0.5rem;
+    }
+    .content__text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+    .text__selector {
+        font-size: medium;
+        padding: 0;
+        margin: 0;
+    }
+    .cta__wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        padding-top: 1rem;
+    }
+    .cta__button {
+        background-color: #242424;
+        color: #ffffff;
+        border: solid white 2px;
+        text-decoration: none;
+        font-weight: bold;
+        border-radius: 6px;
+        transition: 0.3s ease;
+        font-size: 18px;
+        padding: 0.5rem;
+    }
+}
