--- a/src/pages/aboutPage/roadmap.css
+++ b/src/pages/aboutPage/roadmap.css
@@ -7,7 +7,9 @@
 .roadmap__content {
     display: flex;
     flex-direction: column;
-    padding: 0.5rem;
+    padding: 2rem;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
 
 .content__title__wrapper {
@@ -25,7 +27,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .text__wrapper {
@@ -45,4 +47,50 @@
     font-size: medium;
     padding: 0;
     margin: 0;
+}
+
+@media (max-width: 850px) {
+    .roadmap__wrapper {
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+    }
+    .roadmap__content {
+        display: flex;
+        flex-direction: column;
+        padding: 0.5rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+    .content__title__wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+    }
+    .content__title {
+        font-size: 2rem;
+    }
+    .content__wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+    }
+    .text__wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+    }
+    .heading__text {
+        font-size: 1.2rem;
+        padding: 0;
+        margin: 0;
+    }
+    .body__text {
+        font-size: medium;
+        padding: 0;
+        margin: 0;
+    }
 }
