--- a/src/pages/aboutPage/summery.css
+++ b/src/pages/aboutPage/summery.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 2rem;
+    padding-top: 4rem;
 }
 
 .image__selector {
@@ -72,7 +72,8 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        padding: 2rem;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
     }
     .image__selector {
         display: block;
