--- a/src/pages/skillsPage/filterSkills.css
+++ b/src/pages/skillsPage/filterSkills.css
@@ -23,10 +23,12 @@
 
 .primary {
     background-color: white;
-    color: black;
+    color: #242424;
     border: solid 2px white;
     border-radius: 1rem;
     padding: 1rem;
+    font-size: medium;
+    font-weight: 700;
 }
 
 .secondary {
@@ -35,6 +37,8 @@
     border: solid 2px white;
     border-radius: 1rem;
     padding: 1rem;
+    font-size: medium;
+    font-weight: 700;
 }
 
 .icon__selector {
@@ -52,13 +56,21 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding: 1rem;
 }
 
-.wrapper__center {
+.wrapper__wrap {
+    width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    gap: 0.5rem;
+}
+
+.wrapper__title {
+    width: 100%;
+    font-size: large;
     text-align: center;
     flex-wrap: wrap;
 }
