--- a/src/pages/skillsPage/filterSkills.css
+++ b/src/pages/skillsPage/filterSkills.css
@@ -4,11 +4,23 @@
     padding: 1rem;
 }
 
-.title__wrapper {}
+.title__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 2rem;
+    gap: 1rem;
+}
 
-.title__heading {}
+.title__heading {
+    font-size: 2rem;
+    margin: 0;
+}
 
-.title__description {}
+.title__description {
+    font-size: 1rem;
+    margin: 0;
+}
 
 .button__wrapper {
     display: flex;
