--- a/src/pages/aboutPage/summery.css
+++ b/src/pages/aboutPage/summery.css
@@ -50,6 +50,11 @@
     padding-top: 4rem;
 }
 
+.cta_spacing {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
 .cta__button {
     background-color: #242424;
     color: #ffffff;
