--- a/src/pages/aboutPage/summery.css
+++ b/src/pages/aboutPage/summery.css
@@ -108,15 +108,15 @@
     }
     .cta__wrapper {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 2rem;
+        gap: 1rem;
         padding-top: 1.5rem;
     }
     .cta_spacing {
-        padding-left: 0.5rem;
-        padding-right: 0.5rem;
+        padding-left: 0rem;
+        padding-right: 0rem;
     }
     .cta__button {
         background-color: #242424;
