--- a/src/pages/projectsPage/projects.css
+++ b/src/pages/projectsPage/projects.css
@@ -15,3 +15,12 @@
     align-items: center;
     text-align: center;
 }
+
+.image_selector {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    object-fit: cover;
+    border-radius: 10px;
+}
