--- a/src/pages/projectsPage/projects.css
+++ b/src/pages/projectsPage/projects.css
@@ -22,6 +22,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
 }
 
 .image_selector {
