Newest Changes | some bug fixes

--- a/src/components/navigation/nav.css
+++ b/src/components/navigation/nav.css
@@ -41,7 +41,7 @@
 }
 
 .Nav__Menu__Mobile {
-    display: hidden;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
