Newest Changes | some bug fixes

--- a/src/pages/projectsPage/projects.css
+++ b/src/pages/projectsPage/projects.css
@@ -37,7 +37,7 @@
     height: 200px;
 }
 
-.project_card_wrapper {
+.project_card {
     display: flex;
     justify-content: center;
     align-items: center;
