update(skills/code/svg): added some svg's and skills as well ass rearranging my skills

--- a/src/pages/skillsPage/filterSkills.css
+++ b/src/pages/skillsPage/filterSkills.css
@@ -88,4 +88,13 @@
     flex-wrap: wrap;
 }
 
+.rounded {
+    border-radius: 100rem;
+}
+
+.Padding_B {
+    padding-bottom: 3rem;
+}
+
 @media (max-width: 850px) {}
+
