--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,56 +1,56 @@
 .project_card_container {
-    width: 300px;
-    height: auto;
-    padding: 1.5rem;
-    background-color: white;
-    border-radius: 10px;
+  width: 300px;
+  height: 460px;
+  padding: 1.5rem;
+  background-color: white;
+  border-radius: 10px;
 }
 
 .project_card_container:hover {
-    scale: 102%;
+  scale: 102%;
 }
 
 .project_card_wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  align-items: center;
 }
 
 .project_card_thumbnail {
-    display: flex;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-bottom: 1rem;
 }
 
 .project_card_content {
-    text-decoration: none;
-    color: black;
-    margin: 0;
+  text-decoration: none;
+  color: black;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .project_card_title {
-    font-size: x-large;
-    font-style: oblique;
-    padding: 1rem;
-    margin: 0;
+  font-size: x-large;
+  font-style: oblique;
+  margin: 0;
 }
 
 .project_card_subtitle {
-    font-size: large;
-    font-style: italic;
-    font-weight: 600;
-    padding-bottom: 0.8rem;
-    margin: 0;
+  font-size: large;
+  font-style: italic;
+  font-weight: 600;
+  margin: 0;
 }
 
 .project_card_description {
-    font-size: medium;
-    font-style: normal;
-    padding-top: 0;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    padding-bottom: 0.5rem;
-    margin: 0;
+  font-size: medium;
+  font-style: normal;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  margin: 0;
 }
